--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,24 @@
+  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body {
-    background-color: gainsboro;
-}
-.contenedor {
-    width: 95%;
-    margin: auto;
-    background-color: aquamarine;
-}
 
-.header {
-    display: flex;
-    justify-content: space-between;
-    padding: 14px;
-}
-.header img {
-    width: 150px;
-}
-.main {
-    background-color: yellow;
+
+
+:root {
+    --poppins : 'Open Sans', sans-serif;
+    --openSans : 'Open Sans', sans-serif;
+
+    --pink: hsl(322, 100%, 66%);
+    --lightPink: hsl(321, 100%, 78%);
+    --lightRed: hsl(0, 100%, 63%);
+
+    --veryDarkCyan: hsl(192, 100%, 9%);
+    --veryPaleBlue: hsl(207, 100%, 98%);
+
+    --paddingContainer : 80px 0;
 }
