--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,356 @@
 
     --paddingContainer : 80px 0;
 }
+
+
+.nav {
+    width: 90%;
+    margin: auto;
+    overflow: hidden;
+    padding: var(--paddingContainer);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header {
+    min-height: 100vh;
+    position: relative;
+    --wave-bottom: url('./images/bg-section-top-mobile-1.svg')
+}
+
+.nav-figure {
+    width: 45%;
+    max-width: 160px;
+}
+.logo {
+    width: 100%;
+    display: block;
+}
+
+.boton-nav {
+    text-decoration: none;
+    border-radius: 30px;
+    color: var(--lightPink);
+    border: 1px solid;
+    padding: 6px 16px;
+    box-shadow: 1px 1px 1px 1px var(--lightPink);
+}
+
+
+/* FIN DEL HEADER - NAV*/
+
+
+.section-uno {
+    min-height: 100vh;
+    padding: var(--paddingContainer);
+    margin: auto;
+    text-align: center;
+    color: var(--veryDarkCyan);
+}
+
+.titulo-section {
+    font-family: var(--poppins);
+}
+
+.parrafo-section {
+    font-family: var(--openSans);
+    margin: 16px auto;
+    width: 90%;
+    text-align: center;
+    line-height: 1.5;
+}
+
+.boton-section {
+    text-decoration: none;
+    background-color: var(--pink);
+    padding: 16px 30px;
+    border-radius: 30px;
+    color: white;
+    display: inline-block;
+    margin-top: 16px;
+}
+
+
+.figure {
+    margin-top: 80px;
+}
+
+.figure .img-mockups {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    display: block;
+}
+
+.number-items {
+    display: flex;
+    flex-direction: column;
+    margin-top: 80px;
+    align-items: center;
+    padding-bottom: 100px;
+    gap: 60px;
+}
+
+.item {
+    overflow: hidden;
+}
+
+.item img {
+    display: block;
+}
+
+.item h3 {
+    font-size: 60px;
+}
+
+.item p {
+    font-family: var(--openSans);
+}
+
+.wave {
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    background-repeat: no-repeat;
+    background-size: 100% 100px;
+}
+
+.wave-bottom {
+    left: 0;
+    bottom: 0;
+    background-image: var(--wave-bottom);
+}
+
+.wave-top {
+    left: 0;
+    top: 0;
+    background-image: var(--wave-top);
+}
+
+
+
+
+
+.section {
+    background-color: var(--veryPaleBlue);
+    padding: 110px 0;
+}
+
+.section-white {
+    background-color: white;
+    position: relative;
+    padding: 210px 0;
+    --wave-top: url('./images/bg-section-bottom-mobile-1.svg');
+    --wave-bottom: url('./images/bg-section-top-mobile-2.svg')
+
+}
+
+.section-container {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    text-align: center;
+    margin: auto;
+}
+
+.section-img {
+    width: 100%;
+    max-width: 350px;
+    display: block;
+    margin: 0 auto;
+}
+.section-parrafo {
+    font-family: var(--openSans);
+}
+
+.section-texts {
+    margin-top: 50px;
+    text-align: center;
+}
+
+.subtitle {
+    margin-bottom: 16px;
+    font-family: var(--poppins);
+}
+
+
+.question{ 
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    margin: auto;
+    position: relative;
+    --wave-top: url('./images/bg-section-bottom-mobile-2.svg');
+    --wave-bottom: url('./images/bg-footer-top-mobile.svg')
+}
+
+
+/* FOOTER */
+
+.footer {
+    color: #FFF;
+    background-color: var(--veryDarkCyan);
+}
+
+.footer-img {
+    color: white;
+    background-color: white;
+}
+.footer-container {
+    width: 90%;
+    text-align: center;
+    margin: auto;
+    
+}
+
+.footer-title {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 16px;
+    font-family: var(--poppins);
+}
+
+.footer-parrafo {
+    line-height: 1.5;
+    margin: 16px 0 50px;
+}
+
+.footer-form {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 80px;
+}
+
+.footer-input {
+    flex-basis: 100%;
+    flex-grow: 1;
+    font-size: 16px;
+    font-family: var(--openSans);
+    border: none;
+    outline: none;
+    border-radius: 3px;
+    padding: 16px 6px;
+    margin-bottom: 20px;
+}
+
+.footer-input-bottom {
+    font-size: 16px;
+    font-family: var(--openSans);
+    background-color: var(--pink);
+    color: #FFF;
+    text-decoration: none;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 40px;
+    font-weight: 600;
+    margin-left: auto;
+}
+
+.footer-contact {
+    line-height: 50px;
+    
+}
+
+.footer-contact::after {
+    content: "Phone: +1-543-123-4567";
+    margin-left: 10px;
+}
+
+.footer-contact-email::after {
+    content: 'example@huddle.com';
+}
+
+.footer-social {
+    display: flex;
+    margin-top: 30px;
+    justify-content: center;
+    gap: 16px;
+}
+
+.footer-link {
+    text-decoration: none;
+    width: 40px;
+}
+
+.footer-icon {
+    width: 100%;
+    display: block;
+}
+
+
+@media (min-width:768px) {
+    .header {
+        --wave-bottom: url('./images/bg-section-top-desktop-1.svg')
+
+    }
+    .titulo-section {
+        font-size: 48px;
+    }
+    .parrafo-section {
+        width: 70%;
+    }
+    .boton-section {
+        padding: 16px 45px;
+    }
+
+    
+    .number-items {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .section-white {
+        --wave-top: url('./images/bg-section-bottom-desktop-1.svg');
+          --wave-bottom: url('./images/bg-section-top-desktop-2.svg')
+    }
+
+    .section-container {
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .section-container-inverse {
+        flex-direction: row;
+    }
+
+    .section-figure {
+        width: 50%;
+    }
+    .section-texts {
+        width: 45%;
+        margin: 0;
+        text-align: start;
+    }
+
+    
+.question{ 
+    
+    --wave-top: url('./images/bg-section-bottom-desktop-2.svg');
+    --wave-bottom: url('./images/bg-footer-top-desktop.svg');
+    }
+
+    .footer-container {
+        padding: 110px 0;
+        display: flex;
+        justify-content: space-between;
+    }
+    .footer-newsletter {
+        width: 50%;
+        max-width: 350px;
+        order: 1;
+    }
+
+    .footer-content {
+        width: 50%;
+        max-width: 300px;
+    }
+
+    .footer-parrafo {
+        margin: 16px 0px 30px;
+    }
+}
